--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+
+  <form action="/skills" method="POST" autocomplete="off">
+    <input type="text" name="skill">
+    <button type="submit">New Skill</button>
+  </form>
+  
+  </body>
 </html>
